# Emotiv_EEG

./: DataFlowDiagram.xml  Emotiv BCI Node-RED.js  Readme.txt
C++/AverageBandPowers/: AverageBandPowers.vcxproj
C++/EmoQuick/: Page1.qml  Page1Form.ui.qml  main.cpp  main.qml
C++/EmoStateLogger/: emostate_logger.csv
C++/EmotivWrapper/: CMakeLists.txt  Emotiv.cpp  Emotiv.hpp  MyEmotivCallback.cpp  MyEmotivCallback.hpp  QEmotivEngine.cpp  QEmotivEngine.hpp  main.cpp
C++/FacialExpressionDemo/: FacialExpressionDemo.vcxproj
C++/GyroData/: CMakeLists.txt  GyroData.vcxproj  main.cpp
C++/HeadsetInformationLogger/: HeadsetInformationLogger.vcxproj
C++/MentalCommandDemo/: MentalCommandDemo.vcxproj
C++/MentalCommandWithCloudProfile/: MentalCommandWithCloudProfile.vcxproj
C++/MentalCommandWithLocalProfile/: MentalCommandWithLocalProfile.vcxproj
C++/MotionDataLogger/: MotionDataLogger.vcxproj
C++/MultiDongleConnection/: MultiDongleConnection.vcxproj
C++/SavingAndLoadingProfileCloud/: SavingAndLoadingProfileCloud.vcxproj
C++/qt-project/: EmoQuick.pro  EmoStateLogger.pro  EmotivWrapper.pro  GyroData.pro  deployment.pri  examples.pro
Code/BTMotor/: BTMotor.ino
Code/Master_Bluetooth/: Master_Bluetooth.ino
Code/MotorBluetooth/: MotorBluetooth.ino
Code/StandardFirmata/: StandardFirmata.ino
Code/bla/: bla.ino
Data/: Rick_1-11-18_14-14.csv
Documenten/: Clearskies.url
Documenten/Vooronderzoeken/: Vooronderzoek_Ruud_Wander_0943741.docx  (+1 more)
EEG/: EEG.ino
EmoStateLogger/: EmoStateLogger.vcxproj  SerialPort.h  main.cpp
StandardFirmata/: StandardFirmata.ino
(+1 files in other folders)
